Use Map.of() in PeertubeTrendingLinkHandlerFactory.